Fixed Overflow

--- a/src/index.css
+++ b/src/index.css
@@ -284,7 +284,7 @@ color: rgba(255, 255, 255, 0.662)
     display: block;
   }
   .deploy{
-    font-size: 35pt;
+    font-size: 30pt;
     line-height: 60px;
     text-align: center;
   }
